# sherpa-s3

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: config.rs  main.rs
src/commands/: cp.rs  ls.rs  mod.rs  rm.rs
