[package]
name = "sherpa-s3"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sherpa"
path = "src/main.rs"

[dependencies]
aws-sdk-s3 = "1.118.0"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.48.0"
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
