[package]
name = "sherpa-s3"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sherpa"
path = "src/main.rs"

[dependencies]
aws-sdk-s3 = { version = "1.118.0", features = ["behavior-version-latest"] }
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
